kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rubyapp-service
  labels:
    app: rubyapp-service
spec:
  ports:
    - port: 4567
      name: http
      targetPort: 4567
  selector:
    app: helloworld-rubyapp
