kubectl_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmpps-integration-api
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: hmpps-integration-api-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
    - hosts:
        - hmpps-integration-api.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: hmpps-integration-api.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hmpps-integration-api-service
                port:
                  number: 8081
